[project]
name = "crawl4ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavel Krusek", email = "pavel@krusek.dk" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
crawl4ai-lab = "crawl4ai_lab:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
